--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "bell-sdk",
   "version": "1.0.0",
-  "description": "",
+  "description": "A TypeScript SDK for interacting with the Bell BaaS API, providing convenient client methods, type-safe interfaces, and easy integration for developers.",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "ts-node src/index.ts"
   },
   "keywords": [],
-  "author": "",
+  "author": "iyanuloluwa-Miracle",
   "license": "ISC",
   "dependencies": {
     "axios": "^1.11.0",
