--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A TypeScript SDK for interacting with the Bell BaaS API, providing convenient client methods, type-safe interfaces, and easy integration for developers.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "dev": "ts-node src/index.ts"
   },
   "keywords": [],
@@ -15,6 +15,7 @@
     "dotenv": "^17.2.1"
   },
   "devDependencies": {
+    "@types/jest": "^30.0.0",
     "@types/node": "^24.2.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.2"
